portfolio casi finalizado

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 
                 <div class="text">
                     <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis accusamus, doloribus repellat, magnam totam quidem vel cumque maiores adipisci possimus odit eaque nulla labore corporis vero fugiat, animi pariatur dolores suscipit omnis. Magnam officia inventore corrupti ut, iusto ad facilis earum magni nisi molestias in soluta atque quos obcaecati doloribus nihil illum exercitationem dolorem laudantium eveniet asperiores assumenda odit. Incidunt nihil illum ab nulla quis laboriosam enim modi eos, ducimus eum molestiae quia totam earum sunt quos tenetur asperiores magnam.
+                        Soy Nicolás Costa, tengo 21 años y soy de Buenos Aires. Desde siempre me ha apasionado la tecnología y, en especial, la programación, un campo en el que encuentro una mezcla perfecta entre lógica y creatividad. Actualmente, estudio la Tecnicatura en Programación en la UNT FRGP y complemento mi formación con diversos cursos que me ayudan a estar al día con las últimas tecnologias. Además, trabajo como analista de infraestructura. En mi tiempo libre, disfruto haciendo deporte y compartiendo momentos con amigos, lo que me ayuda a mantener un equilibrio entre lo personal y lo profesional. Mi objetivo es seguir creciendo tanto en el ámbito laboral como académico, siempre buscando nuevos desafíos.
                     </p>
                 </div>
             </div>
