--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--FONTAWESOME-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
-    <title>Document</title>
+    <title>Portfolio</title>
 </head>
 <body>
     <header>
@@ -37,16 +37,16 @@
                     con la determinación de crecer profesionalmente y generar experiencias positivas en equipo.</p>
 
                 <div class="social-icons">
-                    <a href="https://www.facebook.com/tu-perfil" class="social-icon">
+                    <a href="https://www.facebook.com/nicolas.costa.372" class="social-icon">
                         <i class="fab fa-facebook"></i>
                     </a>
-                    <a href="https://www.twitter.com/tu-perfil" class="social-icon">
-                        <i class="fab fa-twitter"></i>
+                    <a href="https://github.com/Ncosta09" class="social-icon">
+                        <i class="fab fa-github"></i>
                     </a>
-                    <a href="https://www.instagram.com/tu-perfil" class="social-icon">
+                    <a href="https://www.instagram.com/costa.nicoo/" class="social-icon">
                         <i class="fab fa-instagram"></i>
                     </a>
-                    <a href="https://www.linkedin.com/tu-perfil" class="social-icon">
+                    <a href="https://www.linkedin.com/in/nicol%C3%A1s-costa-3b7301191/" class="social-icon">
                         <i class="fab fa-linkedin"></i>
                     </a>
                 </div>
